# bachelorarbeit_accelerate_opencl

./: .gitignore  README.md
accelerate/: README.md  cabal.project  stack.yaml
accelerate/accelerate-examples/: README.md  accelerate-examples.cabal  test.hs
accelerate/accelerate-examples/blur/: Config.hs  Main.hs  README.md
accelerate/accelerate-examples/gaussian/: Config.hs  Elimination.hs  LICENSE  Main.hs  README.md
accelerate/accelerate-examples/lib/Data/Array/Accelerate/Examples/Internal/: ParseArgs.hs
accelerate/accelerate-examples/nn/: Config.hs  Main.hs  NearestNeighbour.hs  README.md
accelerate/accelerate-llvm/: accelerate-llvm.cabal
accelerate/accelerate-llvm-native/: accelerate-llvm-native.buildinfo
accelerate/accelerate-llvm-ptx/: accelerate-llvm-ptx.cabal
opencl/: Makefile  README.md
opencl/blur/: Makefile  README.md  blur.cl  cbmp.c  helper.c  helper.h  main.c  timing.c  timing.h
opencl/common/: make.config
opencl/gaussian/: Makefile  README.md  gaussianElim.cpp  gaussianElim.h  gaussianElim_kernels.cl  matrix.txt  run
opencl/nn/: Makefile  README.md  nearestNeighbor.cpp  nearestNeighbor.h  nearestNeighbor_kernel.cl  run
